<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.adastraapp.screens.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/falcon_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="533dp"
            android:scaleType="fitXY"
            android:tint="#50000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/falcon9_landing" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/falcon_image"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/core_serial_title"
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.selectedSerial}"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/core_title_text"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/core_title_text"
                    app:layout_constraintTop_toBottomOf="@+id/core_title_text" />

                <TableLayout
                    android:id="@+id/tableLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/detail_fragment_margin"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="@dimen/detail_fragment_margin"
                    android:stretchColumns="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/core_serial_title">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                        <TextView
                            android:id="@+id/status_table_title"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@string/status"
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/status_table_text"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@{viewModel.selectedStatus}" />


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/line1"
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#FF909090"
                            android:padding="2dip" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/block_table_title"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@string/block_type" />

                        <TextView
                            android:id="@+id/block_table_text"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@{viewModel.selectedBlock}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/line2"
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#FF909090"
                            android:padding="2dip" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/original_launch_table_title"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@string/original_launch_date" />

                        <TextView
                            android:id="@+id/original_launch_table_text"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@{viewModel.selectedLaunchDate}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/line3"
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#FF909090"
                            android:padding="2dip" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/reuse_count_table_title"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@string/reuse_count" />

                        <TextView
                            android:id="@+id/reuse_count_table_text"
                            style="@style/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/table_row_height"
                            android:gravity="center|start"
                            android:text="@{viewModel.selectedReuseCount}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/line4"
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#FF909090"
                            android:padding="2dip" />
                    </TableRow>


                </TableLayout>

                <TextView
                    android:id="@+id/details_title"
                    style="@style/textList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_fragment_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/detail_fragment_margin"
                    android:text="@string/details"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

                <TextView
                    android:id="@+id/details_text"
                    style="@style/textList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_fragment_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/detail_fragment_margin"
                    android:layout_marginBottom="32dp"
                    android:text="@{viewModel.selectedDetails}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_title" />

                <TextView
                    android:id="@+id/core_title_text"
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Core"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:tint="@color/justWhite"
            android:onClick="@{()->viewModel.onArrowBackClicked()}"
            app:layout_constraintStart_toStartOf="@+id/falcon_image"
            app:layout_constraintTop_toTopOf="@+id/falcon_image"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>